--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.0.0-beta2'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
-    compile 'com.google.android.gms:play-services-analytics:11.0.2'
+    // Anko Commons
+    compile "org.jetbrains.anko:anko:$anko_version"
+
+
+//    compile 'com.google.android.gms:play-services-analytics:11.0.2'
 
     compile 'com.google.firebase:firebase-core:11.0.2'
     compile 'com.google.firebase:firebase-messaging:11.0.2'
