--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,13 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
         applicationId "com.troshchiy.analytics"
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 25
 
         versionCode 1
         versionName "1.0"
@@ -49,17 +49,13 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.0.0-beta2'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     // Anko Commons
     compile "org.jetbrains.anko:anko:$anko_version"
 
-
-//    compile 'com.google.android.gms:play-services-analytics:11.0.2'
-
     compile 'com.google.firebase:firebase-core:11.0.2'
-//    compile 'com.google.firebase:firebase-messaging:11.0.2'
 
     testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
