--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".FirstActivity" />
+        <activity android:name=".SearchActivity" />
         <activity android:name=".SecondActivity" />
 
     </application>
